--- a/Applications_Of_Reinforcement_Learning/Assignment-2/210077_ajay sankar/assignment.ipynb
+++ b/Applications_Of_Reinforcement_Learning/Assignment-2/210077_ajay sankar/assignment.ipynb
@@ -9,18 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (517881941.py, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/mas/Documents/Project2022/Applications_Of_Reinforcement_Learning/Assignment-2/210077_ajay sankar/assignment.ipynb Cell 2'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mas/Documents/Project2022/Applications_Of_Reinforcement_Learning/Assignment-2/210077_ajay%20sankar/assignment.ipynb#ch0000002?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/mas/Documents/Project2022/Applications_Of_Reinforcement_Learning/Assignment-2/210077_ajay%20sankar/assignment.ipynb#ch0000002?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mas/Documents/Project2022/Applications_Of_Reinforcement_Learning/Assignment-2/210077_ajay%20sankar/assignment.ipynb#ch0000002?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mas/Documents/Project2022/Applications_Of_Reinforcement_Learning/Assignment-2/210077_ajay%20sankar/assignment.ipynb#ch0000002?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m train_test_split\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+      "\u001b[0;36m  Input \u001b[0;32mIn [9]\u001b[0;36m\u001b[0m\n\u001b[0;31m    url=https://github.com/mas622424/Project2022/blob/main/Applications_Of_Reinforcement_Learning/Assignment-2/210077_ajay sankar/CarPrice_Assignment.csv\u001b[0m\n\u001b[0m                                                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
      ]
     }
    ],
@@ -28,9 +25,239 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "url=https://github.com/mas622424/Project2022/blob/main/Applications_Of_Reinforcement_Learning/Assignment-2/210077_ajay sankar/CarPrice_Assignment.csv\n",
+    "given=[[190.9,70.3,54.9,183,3.64,123]]\n",
+    "alpha=0.01\n",
+    "cycle=5000\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def splitting(mat,rat):\n",
+    "    training=mat.iloc[0:(int((mat.shape[0])*rat))].values\n",
+    "    testing=mat.iloc[(int((mat.shape[0])*rat)):mat.shape[0]].values\n",
+    "    return training,testing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def concate(mat):\n",
+    "    return np.concate((np.ones((mat.shape[0],1)),mat),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient(X,Y,Theta,cycle,alpha):\n",
+    "    cost=np.zeros(cycle)\n",
+    "    for i in range(cycle):\n",
+    "        error=((X.dot(Theta.T))-Y)\n",
+    "        multiplyerror=(error.T@X)\n",
+    "        Theta=Theta-(alpha/X.shape[1])*multiplyerror\n",
+    "        cost[i]=Cost(X,Y,Theta)\n",
+    "    return Theta,cost \n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Cost(X,Y,Theta):\n",
+    "    return {1/2*X.shape[0]}*(np.sum(((X.dot(Theta,T))-Y)**2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalization(mat):\n",
+    "    return (mat-(mat.min()))/((mat.max())-(mat.min()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### standard normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def snormalization(mat):\n",
+    "    return (mat-mat.mean())/mat.std() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prediction(X,Theta):\n",
+    "    return X.dot(Theta.T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def r2(Ypr,Y):\n",
+    "    return 1- {(np.sum((Ypr-Y)**2))/(np.sum((Y-Y.mean())**2))}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### import data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_data=pd.read_csv(url,skipinitialspace=True,usecols=['carwidth','carheight','enginesize','stroke','horsepower'])\n",
+    "price_data=pd.read_csv(url,skipinitialspace=True,usecols=['price'])\n",
+    "Theta=np.zeros((1,my_data.shape[1]+1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 80:20\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data,test_data=splitting(My_data,0.8)\n",
+    "train_price,test_price=splitting(Price_data,0.8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# normalize ,calculate gradient and stacking a column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "My_data,F1,F2=normalization(my_data)\n",
+    "Price_data,F3,F4=normalization(price_data)\n",
+    "\n",
+    "Theta,Cost=gradient(train_data,train_price,Theta,cycle,alpha)\n",
+    "\n",
+    "train_data=concate(train_data)\n",
+    "test_data=concate(test_data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(range(cycle),Cost)\n",
+    "plt.xlabel('iteration')\n",
+    "plt.ylabel('price')\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
