--- a/Applications_Of_Reinforcement_Learning/Assignment-2/210396_Sathwik/assignment2.ipynb
+++ b/Applications_Of_Reinforcement_Learning/Assignment-2/210396_Sathwik/assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 382,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,8 +109,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function for Importing data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
