--- a/Applications_Of_Reinforcement_Learning/Assignment-3/210299_krishna dantu/binary classification.ipynb
+++ b/Applications_Of_Reinforcement_Learning/Assignment-3/210299_krishna dantu/binary classification.ipynb
@@ -275,12 +275,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### task 2 prediction:"
+    "#### task 2 prediction:\n",
+    "assumed pclass of arpit to be 3 and shreya as 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
